--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="dist/index.bundle.js"></script></body>
+    <script type="text/javascript" src="{{ url_for('static', filename='index.bundle.js') }}"></script>
+  </body>
 </html>
